Add images directory, complete frittata.html

--- a/recipes/frittata.html
+++ b/recipes/frittata.html
@@ -9,6 +9,36 @@
 
     <body>
         <h1>Potato &amp; Cheese Frittata</h1>
+
+        <img src="../images/frittata.webp" alt="a photo of a freshly made frittata">
+
+        <h2>Description:</h2>
+        <p>This potato and cheese frittata is great by itself or with some fruit on a Sunday morning.</p>
+        <p>A personal favorite, this is what my Nonna used to make for me when I was a kid and I've loved it ever since!</p>
+
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>2 tablespoons of olive oil</li>
+            <li>2 large russet potatoes, peeled and shredded</li>
+            <li>1 medium onion, diced</li>
+            <li>salt and pepper to taste</li>
+            <li>½ cup shredded Parmigiano cheese</li>
+            <li>4 eggs, beaten</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Preheat the oven to 200° C (400° F)</li>
+            <li>Heat oil in a 12 inch skillet over medium-high heat.</li>
+            <li>When the skillet is hot, add the potatoes, and fry until crispy and golden, about 15 minutes.</li>
+            <li>Reduce heat to medium, and add onions. Cook, stirring, until softened.</li>
+            <li>Season with salt and pepper. Pour eggs over the potatoes and onions.</li>
+            <li>Place the skillet in the oven for about 10 minutes, or until eggs are firm.</li>
+            <li>Remove from the oven, and sprinkle shredded cheese over the top.</li>
+            <li>Return to the oven for about 5 minutes, or until cheese is melted.</li>
+        </ol>
+
+        <p>You're done! Enjoy your piping hot frittata, just how Nonna used to make!</p>
     </body>
 
 </html>
