--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/frittata.html">Recipe for Potato &amp; Cheese Frittata: an Italian classic!</a>
+        <ul>
+            <li><a href="./recipes/frittata.html" target="_blank">Recipe for Potato &amp; Cheese Frittata: an Italian classic!</a></li>
+            <li><a href="./recipes/margherita.html" target="_blank">Recipe for authentic Pizza Margherita: Neapolitans would be proud!</a></li>
+            <li><a href="./recipes/tiramisu.html" target="_blank">Recipe for a delicious Tiramisù: a great dessert for any meal!</a></li>
+        </ul>
     </body>
 
 </html>
